페이지 보완

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   link: /about.html
 - name: Blog
   link: /blog.html
-- name: Items
-  link: /items.html
+- name: Books
+  link: /books.html
 - name: Contacts
   link: /contacts.html
