--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 
-title: Github Pages 예제
-description: Github Pages 사용 예제 모음
-logo: "assets/images/profile (200 x 200).png"
+title: Project ZZOM
+description: 1인출판 프로젝트
+logo: "assets/images/zzom-logo-dark (200 x 200).png"
 theme: jekyll-theme-minimal
 lang: ko-KR
 collections: 
-  items:
+  books:
     output: true
 defaults:
   - scope:
       path: ""
-      type: "items"
+      type: "books"
     values:
-      layout: "item"
+      layout: "book"
   - scope:
       path: ""
       type: "posts"
